# Weather-in-CLI

./: .gitignore  README.md  pyproject.toml
wttr_package/: main.py
