[tool.poetry]
packages = [
  { include = "wttr_package" },
]

name = "weather checker"
version = "0.1.0"
description = "tool, which helps in cheking weather, work with HTTP requests"
authors = ["Stanislav <yastva3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
script = "wttr_package.main:main"
